--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/language-service": "^6.0.3",
     "@angular/material": "^6.3.3",
     "@types/jasmine": "~2.8.6",
+    "@types/lodash": "^4.14.64",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
